2.5.3
[rem] remove usage of xbmc.LOGSEVERE, it's being removed in Kodi 19

2.5.2
[add] Add additional stream properties at playback
[fix] Get OAuth token on Kodi 19
[upd] Use new settings format on Kodi 19
[upd] Update material to reflect repository changes

2.5.1
[fix] encoding issue causing streams/videos/live notifications to be inaccessible with some languages

2.5.0
[fix] language setting
[fix] show vodcasts in Following Live Channels
[fix] logging in Kodi 19
[upd] frame rate limiting to allow for 60 fps limit
[lang] fr_FR |contrib: alan7000|

2.4.10
[fix] fix live notifications
[fix] fix clips
[fix] double entries in followed live streams

2.4.9
[fix] fix listing live streams

2.4.8
[fix] resolve indefinite busy dialog on failed playback
[fix] sort by viewers for followed live channels, restoring previous behavior
[fix] menu settings not taking effect
[fix] handle no stream available error
[rem] remove Playlists

2.4.7
[fix] remaining private api calls ie. following games, toggle following games

2.4.6
[add] Settings - Login - Private API Credentials
[fix] basic playback, set default Private API Credentials - Client ID
[fix] oauth short link generation w/ python 3
[rem] Remove deprecated scope chat_login

2.4.5
[rem] Remove deprecated api Communities and related content

2.4.4
[fix] unable to clean up class left in memory; N9XBMCAddon7xbmcgui6WindowE |contrib: lekma|

2.4.3
[fix] ads causing playback issues with InputStream Adaptive
[fix] migrate url shortener from Google URL Shortener to Google Firebase Dynamic Links
[upd] move Live Notifications to it's own thread

2.4.2
[fix] fixed issue with Live Notifications if no followed channels are live

2.4.1
[chg] Settings and Refresh menu items to unplayable items instead of folders

2.4.0
[add] allow limiting framerate to 30 fps when video quality is set to Source
[fix] change import from absolute to relative
[chg] clips default to source quality instead of always ask